Integriere \jurtitle in die jurdoc-Umgebung und entferne den hässlichen \begin{document}-Hack

--- a/document.core.tex
+++ b/document.core.tex
@@ -8,13 +8,12 @@
 	%\item Amtliche Bekanntmachung 2014 KIT 021 vom 02.05.2014
 %}
 
-% Hier kommt der Titel des Dokuments. In eckigen Klammern falls benötigt ein
+
+% Hier beginnt das eigentliche Dokument.
+% Argument ist der Titel des Dokuments. In eckigen Klammern falls benötigt ein
 % Kurztitel der dann statt des langen in Kopfzeilen oder im Inhaltsverzeichnis
 % angezeigt wird
-\jurtitle[Kurztitel]{Langer Titel\\des Dokuments}
-
-% Hier beginnt das eigentliche Dokument
-\begin{jurdoc}
+\begin{jurdoc}[Kurztitel]{Langer Titel\\des Dokuments}
 
 \jurparagraph{Erster Paragraph}\label{neues_dokument:erster_paragraph}
 % Die Labels sind nützlich für Verweise, da kann man dann mit \ref{} drauf verweisen
