--- a/vs-satzung/document.core.tex
+++ b/vs-satzung/document.core.tex
@@ -4,9 +4,8 @@
 	\item Amtliche Bekanntmachung 2013 KIT 004 vom 04.02.2013
 }
 
-\jurtitle[Organisationssatzung]{Organisationssatzung\\der Verfassten Studierendenschaft\\des Karlsruher Instituts für Technologie (KIT)}
 
-\begin{jurdoc}
+\begin{jurdoc}[Organisationssatzung]{Organisationssatzung\\der Verfassten Studierendenschaft\\des Karlsruher Instituts für Technologie (KIT)}
 \setcounter{juratoclevel}{2}
 
 %
