--- a/vs-uebergangsbestimmungen/document.core.tex
+++ b/vs-uebergangsbestimmungen/document.core.tex
@@ -4,9 +4,7 @@
 	\item Amtliche Bekanntmachung 2013 KIT 004 vom 04.02.2013
 }
 
-\jurtitle{Übergangsbestimmungen}
-
-\begin{jurdoc}
+\begin{jurdoc}{Übergangsbestimmungen}
 
 \jurparagraph{Dauer der ersten Amtsperiode}\label{amtsperiode}
 Die Amtsperiode des ersten Studierendenparlaments beginnt am Tag nach der Feststellung des Wahlergebnisses durch das Präsidium des KIT und endet abweichend von § 16 Absatz 3 der Organisationssatzung am 30. September 2014.
