--- a/wahl-abstimmungsordnung/document.core.tex
+++ b/wahl-abstimmungsordnung/document.core.tex
@@ -4,9 +4,8 @@
 	\item Amtliche Bekanntmachung 2013 KIT 004 vom 04.02.2013
 }
 
-\jurtitle[Wahl- und Abstimmungsordnung]{Wahl- und Abstimmungsordnung\\der Verfassten Studierendenschaft\\des Karlsruher Instituts für Technologie (KIT)}
 
-\begin{jurdoc}
+\begin{jurdoc}[Wahl- und Abstimmungsordnung]{Wahl- und Abstimmungsordnung\\der Verfassten Studierendenschaft\\des Karlsruher Instituts für Technologie (KIT)}
 
 \jurparagraph{Geltungsbereich}\label{wahl:geltungsbereich}
 Diese Satzung regelt die Wahlen zum Studierendenparlament und den Fachschaftsvorständen, die Urabstimmung, sowie die Wahlen zu weiteren Organen der Studierendenschaft, sofern eine Satzung dies vorsieht.
