--- a/vs-satzung/document.core.tex
+++ b/vs-satzung/document.core.tex
@@ -1,7 +1,8 @@
-\stupadate{22.01.2013}
-\publishdate{04.02.2013}
+\stupadate{15.04.2014}
+\publishdate{02.05.2014}
 \jurchanges{
 	\item Amtliche Bekanntmachung 2013 KIT 004 vom 04.02.2013
+	\item Amtliche Bekanntmachung 2014 KIT 021 vom 02.05.2014
 }
 
 
@@ -124,7 +125,7 @@ Die Organisation der Vollversammlung obliegt dem Ältestenrat; er kann den Vorst
 
 Die Vollversammlung findet spätestens 30~Tage nach dem Beschluss des Studierendenparlaments oder der Fachschaftenkonferenz bzw. dem Eingang des Antrags der Mitglieder statt, sofern im Beschluss oder Antrag kein Zeitpunkt genannt ist oder der genannte Zeitpunkt die rechtzeitige Einladung nicht zulässt.
 
-Die Einladung zur Vollversammlung erfolgt durch eine Bekanntmachung entsprechend \ref{grundsaetze:wahlen:bekanntmachung} mit einer Frist von einer Woche. Die Bekanntmachung enthält einen Vorschlag für die Tagesordnung, der alle auf Einberufungsanträgen gewünschten Tagesordnungspunkte enthalten muss.
+Die Einladung zur Vollversammlung ist mit einer Frist von einer Woche öffentlich innerhalb des KIT auszuhängen. Mindestens ein Aushang an zentraler Stelle jeder Fakultät sowie der Mensa ist erforderlich. Die Bekanntmachung enthält einen Vorschlag für die Tagesordnung, der alle auf Einberufungsanträgen gewünschten Tagesordnungspunkte enthalten muss.
 
 Vollversammlungen sind öffentlich. Die anwesenden Mitglieder haben Rederecht. Nichtmitglieder können auf Antrag von der Vollversammlung ausgeschlossen werden.
 
@@ -442,6 +443,7 @@ Die Fachschaftsversammlung kann Kompetenzen an andere Organe der Fachschaft übe
   \item Genehmigung des Haushaltsplans der Fachschaft,
   \item Beschluss einer Neuwahl des Fachschaftsvorstands gemäß \refPar{fachschaft:vv:wahl}, \label{fachschaft:vv:kompetenzen:abwahl}
   \item Einsetzen der Wahlleiterin.\label{fachschaft:vv:wahlleiter}
+  \item Erstellung des Wahlvorschlags zum Fachschaftsvorstand gem.\ §~11 Absatz~4 Wahlordnung. Alle zulässigen Vorschläge sind aufzunehmen.
   \end{enumerate}
 
 Die Fachschaftsversammlung kann mit 10~\% aller Stimmen und Zweidrittel der abgegebenen Stimmen be\-schlie\-ßen, eine Neuwahl des Fach\-schaftsvor\-stands zu veranlassen\label{fachschaft:vv:wahl}.
