--- a/wahl-abstimmungsordnung/document.core.tex
+++ b/wahl-abstimmungsordnung/document.core.tex
@@ -1,7 +1,8 @@
-\stupadate{22.01.2013}
-\publishdate{04.02.2013}
+\stupadate{15.04.2014}
+\publishdate{02.05.2014}
 \jurchanges{
 	\item Amtliche Bekanntmachung 2013 KIT 004 vom 04.02.2013
+	\item Amtliche Bekanntmachung 2014 KIT 021 vom 02.05.2014
 }
 
 
@@ -30,14 +31,14 @@ Die Urabstimmung findet spätestens während der nächsten Wahl zum Studierenden
 
 \jurparagraph{Wahlberechtigung und Wählbarkeit}\label{wahl:wahlberechtigung}
 
-Wahlberechtigt sind alle Mitglieder, die im Wählerverzeichnis eingetragen sind.
+Wahlberechtigt sind alle Mitglieder, die im Wählerinnenverzeichnis eingetragen sind.
 
-Wählbar sind alle Mitglieder, welche in einem gültigen Wahlvorschlag aufgeführt sind. Mitglieder des Wahlausschusses sowie des Ältestenrates dürfen in keinen Wahlvorschag aufgenommen werden.
+Wählbar sind alle Mitglieder, welche in einem gültigen Wahlvorschlag aufgeführt sind. Mitglieder des Wahlausschusses, Wahlleiterinnen sowie Mitglieder des Ältestenrates dürfen in keinen Wahlvorschlag aufgenommen werden.
 
 \jurparagraph{Wahltermin}\label{wahl:walhtermin}
 Die Wahlen sollen jährlich im Sommersemester parallel zur Wahl der studentischen Senatsmitglieder des KIT stattfinden.
 
-Das Studierendenparlament legt Termin und Dauer der Wahlen fest. Der Wahlzeitraum besteht aus wenigstens drei und höchstens fünf aufeinanderfolgenden Tagen. Die Wahlen dürfen nicht in den ersten drei Vorlesungswochen oder in der letzten Vorlesungswoche des Semesters stattfinden.
+Das Studierendenparlament legt Termin und Dauer der Wahlen gemäß §~40 Absatz~5 Organisationssatzung fest. Der Wahlzeitraum besteht aus wenigstens drei und höchstens fünf aufeinanderfolgenden Tagen. Die Wahlen dürfen nicht in den ersten drei Vorlesungswochen oder in der letzten Vorlesungswoche des Semesters stattfinden.
 
 In der Regel finden die Wahlen zum Studierendenparlament und den Fachschaftsvorständen zeitgleich statt.
 
@@ -51,7 +52,7 @@ Der Wahlausschuss ist beschlussfähig, wenn mehr als die Hälfte seiner Mitglied
 Der Wahlausschuss ist zuständig für
 \begin{enumerate}
     \item Bekanntmachung der Wahl bzw. Urabstimmung,
-    \item Erstellung des Wählerverzeichnisses,
+    \item Erstellung des Wählerinnenverzeichnisses,
     \item Annahme, Zulassung und Bekanntmachung der Wahlvorschläge,
     \item Anfertigung der Stimmzettel sowie der weiteren für Wahl und Auszählung erforderlichen Unterlagen,
     \item Beschaffung, Versiegelung und Aufbewahrung der Wahlurnen,
@@ -61,16 +62,16 @@ Der Wahlausschuss ist zuständig für
 \end{enumerate}
 
 \jurparagraph{Bekanntmachung der Wahlen}\label{wahl:bekanntmachung-wahl}
-Der Wahlausschuss macht die Wahl spätestens 42 Tage vor dem ersten Wahltag bekannt.
+Der Wahlausschuss macht die Wahl spätestens 42 Tage vor dem ersten Wahltag gemäß §~40 Absatz~3 Organisationssatzung bekannt.
 
 Die Bekanntmachung enthält:
 \begin{enumerate}
      \item den Wahlzeitraum sowie die Abstimmungszeiten,
-     \item den Hinweis, dass nur wählen darf, wer am Tag des endgültigen Abschlusses des Wählerverzeichnises in diesem eingetragen ist,
-     \item Ort, Dauer und Zeit der Einsichtsmöglichkeit in das Wählerverzeichnisses,
+     \item den Hinweis, dass nur wählen darf, wer am Tag des endgültigen Abschlusses des Wählerinnenverzeichnises in diesem eingetragen ist,
+     \item Ort, Dauer und Zeit der Einsichtsmöglichkeit in das Wählerinnenverzeichnisses,
      \item die zu wählenden Gremien sowie die Zahl der jeweils zu wählenden Mitglieder und deren Amtszeit,
-     \item die Aufforderung, spätestens am 24. Tag vor dem ersten Wahltag Wahlvorschläge beim Wahlausschusses einzureichen,
-     \item den Hinweis, dass Wahlbewerber und Vertreter eines Wahlvorschlags nicht Mitglieder des Wahlausschusses sein können,
+     \item die Aufforderung, spätestens am 24. Tag vor dem ersten Wahltag Wahlvorschläge beim Wahlausschuss einzureichen,
+     \item <gestrichen>
      \item den Hinweis auf die Form und den Inhalt der Wahlvorschläge,
      \item die Bestimmungen über die Briefwahl nach \ref{wahl:briefwahl},
      \item den Hinweis darauf, dass keine Bindung an eine bestimmte Wahlurne besteht,
@@ -86,8 +87,8 @@ Die Bekanntmachung enthält:
 \begin{enumerate}
      \item den Antragstext sowie die Abstimmungsmöglichkeiten,
      \item den Wahlzeitraum sowie die Abstimmungszeiten,
-     \item den Hinweis, dass nur wählen darf, wer am Tag des endgültigen Abschlusses des Wählerverzeichnises in diesem eingetragen ist,
-     \item Ort, Dauer und Zeit der Einsichtsmöglichkeit in das Wählerverzeichnisses,
+     \item den Hinweis, dass nur wählen darf, wer am Tag des endgültigen Abschlusses des Wählerinnenverzeichnises in diesem eingetragen ist,
+     \item Ort, Dauer und Zeit der Einsichtsmöglichkeit in das Wählerinnenverzeichnisses,
      \item die Bestimmungen über die Briefwahl nach \ref{wahl:briefwahl},
      \item den Hinweis darauf, dass keine Bindung an eine bestimmte Wahlurne besteht,
      \item den Hinweis darauf, wo die Wahl- und Abstimmungsordnung einzusehen ist.
@@ -95,39 +96,34 @@ Die Bekanntmachung enthält:
 
 Die Bekanntmachung ist nicht vor Ende der Urabstimmung zu entfernen.
 
-\jurparagraph{Wählerverzeichnis}\label{wahl:wählernverzeichnis}
+\jurparagraph{Wählerinnenverzeichnis}\label{wahl:wählerinnenverzeichnis}
 
-Alle Wahlberechtigten sind in ein Wählerverzeichnis in Listenform einzutragen. Die Aufstellung des Wählerverzeichnisses obliegt dem  Wahlausschuss. Es kann im Wahlverfahren auch in elektronischer Form  verwendet werden.
+Alle Wahlberechtigten gemäß §~3 Absatz~2 Organisationssatzung sind in ein Wählerinnenverzeichnis in Listenform einzutragen. Die Aufstellung des Wählerinnenverzeichnisses obliegt dem  Wahlausschuss. Es kann im Wahlverfahren auch in elektronischer Form  verwendet werden.
 
-Das Wählerverzeichnis enthält die folgenden Angaben:
+Das Wählerinnenverzeichnis enthält die folgenden Angaben:
 \begin{enumerate}
 \item laufende Nummer,
 \item Familienname,
 \item Vorname,
 \item Matrikelnummer,
-\item Studiengang,
+\item Fakultätszugehörigkeit,
 \item Vermerk über die Stimmabgabe,
 \item Bemerkungen.
 \end{enumerate}
 
-Das Wählerverzeichnis ist sieben Tage nach Bekanntmachung der Wahl bzw. Urabstimmung vorläufig  abzuschließen und für fünf Tage beim Wahlausschuss zur Einsicht durch die Studierenden aufzulegen. Eine Einsichtnahme steht jedem zu, um seine  eigenen Daten auf Richtigkeit und Vollständigkeit zu überprüfen. Zur Überprüfung der Richtigkeit oder Vollständigkeit der Daten von anderen im Wählerverzeichnis eingetragenen Personen haben Wahlberechtigte nur dann ein Recht auf Einsicht in das Wählerverzeichnis, wenn sie Tatsachen glaubhaft machen, aus denen sich eine Unrichtigkeit oder Unvollständigkeit des Wählerverzeichnisses ergeben kann.  \label{wahl:wählerverzeichnis:auflegung}
+Das Wählerinnenverzeichnis ist sieben Tage nach Bekanntmachung der Wahl bzw. Urabstimmung vorläufig  abzuschließen und für fünf Tage beim Wahlausschuss zur Einsicht durch die Studierenden aufzulegen. Eine Einsichtnahme steht jedem zu, um seine  eigenen Daten auf Richtigkeit und Vollständigkeit zu überprüfen. Zur Überprüfung der Richtigkeit oder Vollständigkeit der Daten von anderen im Wählerinnenverzeichnis eingetragenen Personen haben Wahlberechtigte nur dann ein Recht auf Einsicht in das Wählerinnenverzeichnis, wenn sie Tatsachen glaubhaft machen, aus denen sich eine Unrichtigkeit oder Unvollständigkeit des Wählerinnenverzeichnisses ergeben kann.  \label{wahl:wählerinnenverzeichnis:auflegung}
 
-Das Wählerverzeichnis ist spätestens am 14. Tag nach Bekanntmachung der Wahl bzw. Urabstimmung  unter Berücksichtigung der Entscheidungen nach  \ref{wahl:aenderungwv:aenderungen} vom Wahlausschuss endgültig  abzuschließen. Dabei ist im Wählerverzeichnis
+Das Wählerinnenverzeichnis ist spätestens am 14. Tag nach Bekanntmachung der Wahl bzw. Urabstimmung  unter Berücksichtigung der Entscheidungen nach  \ref{wahl:aenderungwv:aenderungen} vom Wahlausschuss endgültig  abzuschließen. Dabei ist im Wählerinnenverzeichnis
 \begin{enumerate}
 \item die Zahl der eingetragenen Wahlberechtigten,
-\item die Zahl der Anträge auf Berichtigung des Wählerverzeichnisses
+\item die Zahl der Anträge auf Berichtigung des Wählerinnenverzeichnisses
 \end{enumerate}
 vom Wahlausschuss zu beurkunden.
 
-\jurparagraph{Änderung des Wählerverzeichnisses}
-Das Wählerverzeichnis kann bis zum Ablauf der Einsichtsfrist vom Wahlausschuss berichtigt oder ergänzt werden.
+\jurparagraph{Änderung des Wählerinnenverzeichnisses}
+Die Einsichtsberechtigten gemäß \ref{wahl:wählerinnenverzeichnis:auflegung} können während der Dauer der Auflegung des Wählerinnenverzeichnisses dessen Berichtigung oder Ergänzung beantragen, wenn sie diese für unrichtig oder unvollständig halten. Der Antrag ist schriftlich beim Wahlausschuss zu stellen. Die erforderlichen Beweise sind vom Antragsteller beizubringen. Der Wahlausschuss entscheidet spätestens am 14. Tag nach Bekanntmachung der Wahl bzw. Urabstimmung über die Anträge. Die Entscheidung ist der Antragstellerin und ggf. der Betroffenen mitzuteilen.\label{wahl:aenderungwv:aenderungen}
 
-Die  Einsichtsberechtigten gemäß \ref{wahl:wählerverzeichnis:auflegung}  können während der Dauer der Auflegung des Wählerverzeichnisses dessen  Berichtigung oder Ergänzung beantragen, wenn sie diese für unrichtig  oder unvollständig halten. Der Antrag ist schriftlich beim Wahlausschuss  zu stellen. Die erforderlichen Beweise sind vom Antragsteller  beizubringen. Der Wahlausschuss entscheidet spätestens am 14. Tag nach Bekanntmachung der Wahl bzw. Urabstimmung  über die Anträge. Die Entscheidung ist der Antragstellerin und ggf. der  Betroffenen mitzuteilen. \label{wahl:aenderungwv:aenderungen}
-
-Nach  Ablauf der Einsichtsfrist bis zum endgültigen Abschluss des  Wählerverzeichnisses können Eintragungen und Streichungen nur in Vollzug  der Entscheidung gemäß \ref{wahl:aenderungwv:aenderungen} vorgenommen  werden.
-
-Das  Wählerverzeichnis kann bis zum 1. Tag vor dem ersten Wahltag vom  Wahlausschuss bei Vorliegen offensichtlicher Fehler, Unstimmigkeiten  oder Schreibversehen berichtigt oder ergänzt werden.
-%soll das "bis zum Tag vor dem ersten Wahltag" heißen?
+Das Wählerinnenverzeichnis kann vom Wahlausschuss bei Vorliegen offensichtlicher Fehler, Unstimmigkeiten oder Schreibversehen berichtigt oder ergänzt werden.
 
 Änderungen sind als solche kenntlich zu machen und mit Datum und Unterschrift zu versehen.
 
@@ -142,22 +138,23 @@ Wahlvorschläge für die Wahl zum Studierendenparlament müssen enthalten
     \item eine von mindestens 30 Wahlberechtigten unterzeichnete Unterstützungsliste.
 \end{enumerate}
 
-Geben die Kennwörter mehrerer Wahlvorschläge zu Verwechslungen Anlass, so fordert der Wahlausschuss die Vertreterin des später eingereichten Wahlvorschlages unverzüglich auf, sich innerhalb der Mängelbeseitigungsfrist ein anderes Kennwort zu geben.
+Geben die Kennwörter mehrerer Wahlvorschläge zu Verwechslungen Anlass, so fordert der Wahlausschuss die Vertreterin des später eingereichten Wahlvorschlages unverzüglich auf, sich innerhalb der Mängelbeseitigungsfrist gemäß \ref{wahl:wahlvorschlaege:maengel} ein anderes Kennwort zu geben.
 
-Ein Wahlvorschlag für den Fachschaftsvorstand wird von der Fachschaftsversammlung erstellt. Er wird von der amtierenden Fachschaftsleiterin unterzeichnet und vertreten. Er beinhaltet:
+Der Wahlvorschlag für einen Fachschaftsvorstand muss enthalten:
 \begin{enumerate}
     \item eine Liste mit Kandidatinnen,
-    \item eine von Sitzungsleitung und Protokollantin unterzeichnete Kopie des Protokolls der Fachschaftsversammlung.
+    \item eine von Sitzungsleitung und Protokollantin unterzeichnete Kopie des Protokolls der Fachschaftsversammlung,
+    \item zwei Unterstützerinnen des Wahlvorschags.
 \end{enumerate}
 
-Unterzeichner müssen für die betreffende Wahl wahlberechtigt sein. Sie müssen folgende Angaben machen:
+Unterstützerinnen müssen für die betreffende Wahl wahlberechtigt sein. Sie müssen folgende Angaben machen:
 \begin{enumerate}
 \item Vor- und Familienname,
 \item Matrikelnummer,
 \item eigenhändige Unterschrift,
 \item bei den ersten beiden Unterstützerinnen: E-Mailadresse und Telefonnummer.
 \end{enumerate}
-Die erste Unterzeichnerin ist zur Vertretung gegenüber dem Wahlausschuss berechtigt, die zweite Unterzeichnerin vertritt sie.
+Die erste Unterstützerin ist zur Vertretung gegenüber dem Wahlausschuss berechtigt, die zweite Unterstützerin vertritt sie.
 
 Eine Wahlberechtigte darf für dieselbe Wahl nicht mehr als einen Wahlvorschlag unterzeichnen. Hat eine Wahlberechtigte dies nicht beachtet, so wird sie von allen eingereichten Wahlvorschlägen gestrichen.
 
@@ -172,14 +169,14 @@ Die Liste der Kandidatinnen muss folgende Angaben zu den Kandidatinnen enthalten
 \end{enumerate}
 Die Kandidatinnen bestätigen mit ihrer Unterschrift die Richtigkeit der Daten sowie ihre Zustimmung, auf den Wahlvorschlag aufgenommen zu werden. Eine Kandidatin darf nicht auf mehreren Wahlvorschlägen für dieselbe Wahl aufgenommen werden.
 
-Mitglieder des Wahlausschusses sowie des Ältestenrats dürfen weder auf einem Wahlvorschlag als Kandidatin geführt werden noch einen vertreten.
+Mitglieder des Wahlausschusses, des Ältestenrats sowie die Wahlleiterinnen gemäß §~40 Absatz~2 Organisationssatzung und \ref{wahl:wahlleiterinnen} dieser Wahl- und Abstimmungsordnung dürfen weder auf einem Wahlvorschlag als Kandidatin geführt werden noch einen Wahlvorschlag vertreten.
 
 Die Zurücknahme von Wahlvorschlägen, Unterschriften unter einem Wahlvorschlag oder Zustimmungserklärungen von Bewerbern ist nur bis zum Ablauf der Einreichungsfrist für die Wahlvorschläge zulässig.
 
-Etwaige Mängel am Wahlvorschlag sind der Vertreterin des Wahlvorschlages unverzüglich, spätestens aber am Tag nach Ablauf der Einreichungsfrist mitzuteilen. Danach besteht bis zum Beginn der Wahlausschusssitzung nach \ref{wahl:zulassung:sitzung} die Gelegenheit, die Mängel zu beseitigen. Das Fehlen von erforderlichen Unterschriften gilt nicht als Mangel im oberen Sinne. Diese können nach Ablauf der Einreichungsfrist nicht nachgeholt werden.
+Etwaige Mängel am Wahlvorschlag sind der Vertreterin des Wahlvorschlages unverzüglich, spätestens aber am Tag nach Ablauf der Einreichungsfrist mitzuteilen. Danach besteht bis zum Beginn der Wahlausschusssitzung nach \ref{wahl:zulassung:sitzung} die Gelegenheit, die Mängel zu beseitigen. Das Fehlen von erforderlichen Unterschriften gilt nicht als Mangel im oberen Sinne. Diese können nach Ablauf der Einreichungsfrist nicht nachgeholt werden.\label{wahl:wahlvorschlaege:maengel}
 
 \jurparagraph{Zulassung der Wahlvorschläge}\label{wahl:zulassung}
-Spätestens am 21. Tag vor dem ersten Wahltag beschließt der Wahlausschuss in einer Sitzung über die Zulassung der eingereichten Wahlvorschläge. \label{wahl:zulassung:sitzung}
+Spätestens am 20.\,Tag vor dem ersten Wahltag beschließt der Wahlausschuss in einer Sitzung über die Zulassung der eingereichten Wahlvorschläge. \label{wahl:zulassung:sitzung}
 
 Zurückzuweisen sind Wahlvorschläge,
 \begin{enumerate}
@@ -204,7 +201,7 @@ Die Beschlüsse und deren Begründungen sind in ein Protokoll aufzunehmen.\label
 
 Wird ein Wahlvorschlag zurückgewiesen oder eine Kandidatin gestrichen, so sind die getroffenen Entscheidungen der Vertreterin des Wahlvorschlages sowie der betroffenen Kandidatin unverzüglich mitzuteilen.
 
-Der Wahlausschuss bestimmt unter den Wahlvorschlägen zum Studierendenparlament per Losziehung eine Reihenfolge.
+Der Wahlausschuss bestimmt unter den Wahlvorschlägen zum Studierendenparlament per Losziehung eine Reihenfolge.\label{wahl:zulassung:reihenfolge}
 
 \jurparagraph{Bekanntmachung der Wahlvorschläge}\label{wahl:bekanntmachungvorschläge}
 Der Wahlausschuss macht die Wahlvorschläge spätestens am 14. Tag vor dem ersten Wahltag bekannt.
@@ -224,7 +221,7 @@ Die Bekanntmachung ist nicht vor Ende der Wahl zu entfernen.
 
 
 \jurparagraph{Briefwahl}\label{wahl:briefwahl}
-Eine Wahlberechtigte, die zum Zeitpunkt der Wahl verhindert ist, die Abstimmung vor Ort vorzunehmen, erhält auf Antrag in Schriftform beim Wahlausschuss für die Wahl einen Wahlschein und die Briefwahlunterlagen, bestehend aus einem Stimmzettel für jede Wahl, einem Wahlumschlag und einem Wahlbriefumschlag. Die Ausgabe der Wahlscheine und der Briefwahlunterlagen ist im Wählerverzeichnis zu vermerken.
+Eine Wahlberechtigte, die zum Zeitpunkt der Wahl verhindert ist, die Abstimmung vor Ort vorzunehmen, erhält auf Antrag in Schriftform beim Wahlausschuss für die Wahl einen Wahlschein und die Briefwahlunterlagen, bestehend aus einem Stimmzettel für jede Wahl, einem Wahlumschlag und einem Wahlbriefumschlag. Die Ausgabe der Wahlscheine und der Briefwahlunterlagen ist im Wählerinnenverzeichnis zu vermerken.
 
 Der Wahlumschlag und der Wahlbriefumschlag müssen als solcher gekennzeichnet sein. Weiter muss der Wahlbriefumschlag die Adresse der Wählerin als Absender und die Adresse des Wahlausschusses als Empfänger ausweisen.\\
 Die Briefwählerin trägt die Kosten der Übersendung. Sie ist hierauf hinzuweisen.
@@ -233,13 +230,17 @@ Briefwahlunterlagen können frühestens am Tag der Bekanntmachung der Wahl und s
 
 Bei der Briefwahl kennzeichnet die Wählerin ihren Stimmzettel und steckt ihn in den Wahlumschlag. Sie bestätigt auf dem Wahlschein durch Unterschrift, dass sie den beigefügten Stimmzettel persönlich gekennzeichnet hat und legt den Wahlschein mit dem verschlossenen Wahlumschlag in den Wahlbriefumschlag.
 
-Der Wahlbrief ist an die vorgedruckte Anschrift des Wahlausschusses ausreichend frankiert zu übersenden oder persönlich beim Wahlausschuss abzugeben. Der Wahlausschuss kann der Wahlberechtigten die Möglichkeit geben, bei persönlicher Abholung der Briefwahlunterlagen die Briefwahl an Ort und Stelle auszuüben; in diesem Fall kann die Stimmabgabe auch noch nach Ablauf der Frist nach \ref{wahl:briefwahl:frist} erfolgen. Dabei ist Sorge zu tragen, dass der Stimmzettel unbeobachtet gekennzeichnet und in den Wahlumschlag gelegt werden kann. Der Wahlausschuss nimmt sodann den Wahlbrief entgegen.
+Der Wahlbrief ist an die vorgedruckte Anschrift des Wahlausschusses ausreichend frankiert zu übersenden oder persönlich beim Wahlausschuss abzugeben.
+
+\parnumberfalse
+(5a) Der Wahlausschuss kann den Wahlberechtigten die Möglichkeit geben, bei persönlicher Abholung der Briefwahlunterlagen die Briefwahl an Ort und Stelle auszuüben; in diesem Fall kann der Antrag auf Briefwahl auch noch nach Ablauf der Frist nach \ref{wahl:briefwahl:frist} erfolgen. Dabei ist Sorge zu tragen, dass der Stimmzettel unbeobachtet gekennzeichnet und in den Wahlumschlag gelegt werden kann. Der Wahlausschuss nimmt sodann den Wahlbrief entgegen.
+\parnumbertrue
 
 Die Stimmabgabe gilt als rechtzeitig erfolgt, wenn der Wahlbrief am letzten Wahltag bis spätestens zum Zeitpunkt des Endes der Abstimmungszeit beim Wahlausschuss eingeht. Auf dem Wahlbriefumschlag ist der Tag des Eingangs, auf den am letzten Wahltag eingehenden Wahlbriefumschlägen zusätzlich die Uhrzeit des Eingangs zu vermerken. Sind eingehende Wahlbriefe unverschlossen, so ist dies auf den Wahlbriefen zu vermerken.
 
 Die eingegangenen Wahlbriefe werden vom Wahlausschuss unter Verschluss ungeöffnet aufbewahrt.
 
-Wahlscheine und Wahlumschläge werden gezählt und die Wahlscheine mit den Eintragungen im Wählerverzeichnis verglichen. Wurde von der Wählerin eine Stimmabgabe an der Urne vorgenommen, so ist ihr Wahlumschlag ungeöffnet zu vernichten.
+Wahlscheine und Wahlumschläge werden gezählt und die Wahlscheine mit den Eintragungen im Wählerinnenverzeichnis verglichen. Wurde von der Wählerin eine Stimmabgabe an der Urne vorgenommen, so ist ihr Wahlumschlag ungeöffnet zu vernichten.
 
 Die Auszählung der per Briefwahl abgegebenen Stimmen erfolgt entsprechend der Auszählung einer Urne gemäß \ref{wahl:auszaehlung}. Haben weniger als zehn Wählerinnen ihre Stimme per Briefwahl abgegeben, so bestimmt der Wahlausschuss eine Urne, zu der die Stimmzettel aus der Briefwahl hinzugefügt werden.
 
@@ -247,7 +248,7 @@ Die Auszählung der per Briefwahl abgegebenen Stimmen erfolgt entsprechend der A
 
 Der Stimmzettel enthält:
 \begin{enumerate}
-    \item die zugelassenen Wahlvorschläge mit ihrem Kennwort und den Kandidatinnen mit vollem Namen und Studienfach; bei den Wahlen zu den Fachschaftsvorständen kann auf die Angabe des Studienfachs verzichtet werden.
+    \item die zugelassenen Wahlvorschläge mit ihrem Kennwort und den Kandidatinnen mit Vor- und Nachname und Studiengang; bei den Wahlen zu den Fachschaftsvorständen kann auf die Angabe des Studiengangs verzichtet werden. Die Reihenfolge der Wahlvorschläge auf dem Stimmzettel entspricht der Reihenfolge gemäß \ref{wahl:zulassung:reihenfolge}.
     \item einen klar zu erkennenden Platz zum Eintragen der Stimmen durch die Wählerinnen,
     \item den Hinweis auf die zur Verfügung stehenden Stimmen sowie den Hinweis auf die Kumulierbarkeit bzw. Panaschierbarkeit der Personenstimmen,
     \item den Hinweis darauf, dass der Stimmzettel vor dem Einwerfen mit dem Aufdruck nach innen zu falten ist,
@@ -255,7 +256,7 @@ Der Stimmzettel enthält:
 \end{enumerate}
 
 \jurparagraph{Wahlurnen und Urnenbuch}\label{wahl:urnen}
-Der Wahlausschuss legt vor Beginn der Wahl die Anzahl der Wahlurnen fest, versiegelt die Urnen und kennzeichnet sie eindeutig und deutlich sichtbar.
+Der Wahlausschuss legt die Anzahl der Wahlurnen fest, versiegelt die Urnen und kennzeichnet sie eindeutig und deutlich sichtbar.
 
 Die Urnen sind so einzurichten, dass die eingeworfenen Stimmzettel nicht vor Ende der Wahl entnommen werden können
 
@@ -269,15 +270,23 @@ Zu jeder Urne ist ein Urnenbuch zu führen. Dieses wird vom Wahlausschuss ausgeg
     \item Zeitpunkt der Öffnung und Schließung der Urne,
     \item der Aufenthaltsort der Urne,
     \item jede während der Wahl festgestellte Unregelmäßigkeit, welche die Urne betrifft, mit dem Zeitpunkt der Feststellung, dem Namen der Feststellenden und der Beschreibung des Vorgangs,
-    \item für jede Wählerin den Namen und die Matrikelnummer.
+    \item für jede Wählerin den Namen, die Matrikelnummer und die Wahlen, an denen sie teilgenommen hat.
 \end{enumerate}
 
-Die Urnen dürfen das Gelände des KIT nicht verlassen; Ausnahmen regelt der Wahlausschuss. Erstreckt sich eine Wahl oder Abstimmung über mehrere Tage, so sind die Urnen über die Nacht von 20:00 bis 7:00 Uhr unter sicherer Verwahrung zu halten. In dieser Zeit ist keine Wahlhandlung zulässig.
+Die Urnen dürfen das Gelände des KIT nicht verlassen; Ausnahmen regelt der Wahlausschuss.
+
+Urnen sind frühestens um 7:00~Uhr zu öffnen und spätestens um 20:00~Uhr zu
+schließen.
 
 \jurparagraph{Wahlhelferinnen}\label{wahl:wahlhelferinnen}
-Der Wahlausschuss bestellt Wahlhelferinnen zur Durchführung der Wahl. Der Wahlausschuss belehrt die Wahlhelferinnen über ihre Pflichten. Der Wahlausschuss kann die Bestellung und Belehrung von Wahlhelferinnen an die Wahlleiterinnen gemäß §~40 Absatz~2 delegieren.
+Der Wahlausschuss bestellt Wahlhelferinnen zur Durchführung der Wahl. Der Wahlausschuss belehrt die Wahlhelferinnen über ihre Pflichten. Der Wahlausschuss kann die Bestellung und Belehrung von Wahlhelferinnen an die Wahlleiterinnen gemäß §~40 Absatz~2 Organisationssatzung delegieren.
 
 Die Wahlhelferinnen nehmen ihr Amt unparteiisch und gewissenhaft wahr. Sie enthalten sich während der Ausübung ihres Amtes jeder parteilichen Betätigung. Dazu gehört auch das Tragen von Parteiabzeichen und "~parolen.
+
+\jursubparagraph{Wahlleiterinnen}\label{wahl:wahlleiterinnen}
+Zusätzlich zu den gemäß §~31 Absatz~4 Nummer~4 Organisationssatzung eingesetzten Wahlleiterinnen kann der Wahlausschuss Wahlleiterinnen bestellen.
+
+Wahlleiterinnen sind für ein bestimmtes Wahllokal verantwortlich.
 
 \jurparagraph{Wahlhandlung}\label{wahl:wahlhandlung}
 Jede Urne wird ständig von einer verantwortlichen Wahlhelferin sowie wenigstens einer weiteren Wahlhelferin betreut. Sind unter den Wahlhelferinnen Kandidatinnen, so müssen diese von unterschiedlichen Wahlvorschlägen stammen. Die Wahlhelferinnen sind für die Einhaltung der Wahl- und Abstimmungsordnung an dieser Wahlurne zuständig und dienen als Ansprechpartnerinnen für die Wählerinnen. Sie sind zur gewissenhaften und unparteiischen Auskunft verpflichtet.
@@ -290,7 +299,7 @@ Die Wahlhelferinnen nehmen die Daten der Wählerin in das Urnenbuch auf und gebe
 
 Die Wahlhelferinnen sorgen für die Möglichkeit einer freien und geheimen Stimmabgabe, beispielsweise durch das Aufstellen von Wahlkabinen.
 
-Beim Einwurf der Stimmzettel markieren die Wahlhelferinnen im Urnenbuch sowie im Wählerverzeichnis die Wahlen, an denen die Wählerin teilgenommen hat.
+Beim Einwurf der Stimmzettel markieren die Wahlhelferinnen im Urnenbuch sowie im Wählerinnenverzeichnis die Wahlen, an denen die Wählerin teilgenommen hat. Die Wählerin bestätigt ihre Stimmabgabe durch Unterschrift im Urnenbuch.
 
 Im Umkreis von zehn Metern um Wahlurnen ist jede Beeinflussung der Wählerinnen untersagt; es dürfen nur vom Wahlausschuss genehmigte Informationen ausgelegt werden.
 
@@ -313,9 +322,9 @@ Ungültig und bei der Ermittlung der Wahlergebnisse nicht anzurechnen sind Stimm
 \begin{enumerate}
     \item die in Inhalt, Form und Farbe von den bereitgestellten abweichen,
     \item die ganz durchgestrichen oder ganz durchgerissen sind,
-    \item die mit Bemerkungen versehen sind, ein auf die Person des Wählenden hinweisendes Merkmal oder einen Vorbehalt enthalten,
+    \item die mit Bemerkungen versehen sind, ein auf die Person der Wählenden hinweisendes Merkmal oder einen Vorbehalt enthalten,
     \item aus dem sich der Wille der Wählerin nicht zweifelsfrei ergibt,
-    \item deren Stimmverteilung nicht den Vorgaben gemäß \ref{wahl:wahlsystem} entspricht; werden bei der Wahl zum Studierendenparlament entweder zuviele Listen- oder zuviele Personenstimmen abgegeben, so werden nur die jeweils zuviel abgegebenen Listen- oder Personenstimmen für ungültig erklärt; die Gültigkeit der ordnungsgemäß abgegebenen Listen- oder Personenstimmen bleibt davon unberührt.
+    \item deren Stimmverteilung nicht den Vorgaben gemäß \ref{wahl:wahlsystem} entspricht; werden bei der Wahl zum Studierendenparlament zu viele Listenstimmen abgegeben, so wird nur die Listenstimme ungültig. Die Gültigkeit der Personenstimmen bleibt unberührt. Gleiches gilt analog bei Abgabe von zu vielen Personenstimmen.
 \end{enumerate}
 
 Für jede Urne wird eine Niederschrift angefertigt. Diese enthält
@@ -363,8 +372,8 @@ Im Anschluss an die Feststellung des Wahlergebnisses übergibt der Wahlausschuss
 \jurparagraph{Bekanntmachung des Wahlergebnisses}\label{wahl:ergebnis}
 Nach der Feststellung gibt der Wahlausschuss das Wahlergebnis bekannt. Die Bekanntmachung enthält:
 \begin{enumerate}
-    \item die Zahl der Wahlberechtigten,
-    \item die Zahl der Wählerinnen,
+    \item für jede Wahl die Zahl der Wahlberechtigten,
+    \item für jede Wahl die Zahl der Wählerinnen,
     \item für jede Wahl die Gesamtzahl der gültigen und ungültigen Stimmzettel,
     \item für jede Wahl die Gesamtzahl der gültigen und ungültigen Stimmen sowie die auf die einzelnen Wahlvorschläge bzw. Kandidatinnen entfallenen Stimmen,
     \item für jede Wahl den Prozentsatz der Wahlbeteiligung,
