--- a/gesamt.tex
+++ b/gesamt.tex
@@ -84,7 +84,7 @@
 
 \title{Organisationssatzung und zentrale Satzungen\\der Verfassten Studierendenschaft\\des Karlsruher Instituts für Technologie (KIT)}
 \author{}
-\date{Stand: 4. Februar 2013\\(amtliche Bekanntmachung)}
+\date{Stand: 2. Mai 2014\\(amtliche Bekanntmachung)}
 
 \usepackage[unicode, pdfusetitle, pdfborder={0 0 0}, bookmarksnumbered]{hyperref}
 
