--- a/gesamt.tex
+++ b/gesamt.tex
@@ -84,7 +84,7 @@
 
 \title{Organisationssatzung und zentrale Satzungen\\der Verfassten Studierendenschaft\\des Karlsruher Instituts für Technologie (KIT)}
 \author{}
-\date{Stand: 2. Mai 2014\\(amtliche Bekanntmachung)}
+\date{Stand: 6. Juni 2014\\(amtliche Bekanntmachung)}
 
 \usepackage[unicode, pdfusetitle, pdfborder={0 0 0}, bookmarksnumbered]{hyperref}
 
@@ -155,6 +155,7 @@ Im Folgenden wird aus Gründen der besseren Lesbarkeit ausschließlich die weibl
 
 
 \input{vs-satzung/document.core.tex}
+\input{beitragsordnung/document.core.tex}
 \input{wahl-abstimmungsordnung/document.core.tex}
 \input{vs-uebergangsbestimmungen/document.core.tex}
 
