2014 KIT 039 vom 26.08.2014 eingearbeitet

--- a/vs-satzung/document.core.tex
+++ b/vs-satzung/document.core.tex
@@ -1,8 +1,9 @@
-\stupadate{15.04.2014}
-\publishdate{02.05.2014}
+\stupadate{27.05.2014}
+\publishdate{26.08.2014}
 \jurchanges{
 	\item Amtliche Bekanntmachung 2013 KIT 004 vom 04.02.2013
 	\item Amtliche Bekanntmachung 2014 KIT 021 vom 02.05.2014
+	\item Amtliche Bekanntmachung 2014 KIT 039 vom 26.08.2014
 }
 
 
@@ -202,7 +203,8 @@ Antragsberechtigt in Sitzungen des Studierendenparlaments sind
   \item die Fachschaftsvorstände,
   \item die Fachschaftenkonferenz,
   \item die Präsidentin der Fachschaftenkonferenz,
-  \item die Mitglieder nach Maßgabe von \ref{studierendenschaft:mitglieder:antraege}.
+  \item die Mitglieder nach Maßgabe von \ref{studierendenschaft:mitglieder:antraege},
+  \item der Vorstand der Studierendenschaft.
   \end{enumerate}
 
 Das Studierendenparlament tagt mindestens einmal pro Vorlesungsmonat. Darüber hinaus muss es auf Antrag des Vorstands, des Ältestenrats oder eines Viertels der Abgeordneten einberufen werden.
@@ -468,7 +470,7 @@ Die Fachschaftenkonferenz wählt Vertreterinnen in den Finanzausschuss nach \ref
 
 \jurparagraph{Zusammensetzung, Stimmverteilung}
 
-Die Fachschaften entsenden Vertreterinnen in die Fachschaftenkonferenz. Die Vertreterinnen jeder Fachschaft werden vom Fachschaftsvorstand gewählt und müssen von der Fachschaftsversammlung bestätigt werden.\label{fsk:zusammensetzung:vertreter}
+Die Fachschaften entsenden Vertreterinnen in die Fachschaftenkonferenz. Die Vertreterinnen jeder Fachschaft werden vom Fachschaftsvorstand gewählt und müssen von der Fachschaftsversammlung bestätigt werden. Außerdem sind alle Mitglieder des Fachschaftsvorstandes vertretungsberechtigt.\label{fsk:zusammensetzung:vertreter}
 
 Die Innenreferentin soll an den Sitzungen mit beratender Stimme teilnehmen.
 
@@ -522,7 +524,7 @@ Studentische Gruppen haben die Möglichkeit, sich als Hochschulgruppe der Studie
 
 Das Studierendenparlament hat die Verfügungsgewalt über das Vermögen der Studierendenschaft.
 
-Das Haushaltsjahr der Studierendenschaft ist das Kalenderjahr.
+Das Haushaltsjahr der Studierendenschaft beginnt am 1.\,April und endet am 31.\,März.
 
 Das Studierendenparlament erlässt eine Finanzordnung und eine Beitragsordung als Satzungen.
 
